apps/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: nori-cloud
  labels:
    app: stirling-pdf
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: stirling-pdf
      port:
        number: 8080
  tls:
    - hosts:
        - pdf
